--- a/drivers/video/msm/Kconfig
+++ b/drivers/video/msm/Kconfig
@@ -307,6 +307,11 @@ config FB_MSM_LCDC_SAMSUNG_ANCORA
 	select FB_MSM_LCDC_PANEL
 	default n
 
+config FB_MSM_LCDC_S6E63M0_WVGA
+	bool
+	select FB_MSM_LCDC_PANEL
+	default n
+
 config FB_MSM_LVDS_CHIMEI_WXGA
 	bool
 	select FB_MSM_LVDS
