--- a/drivers/video/msm/Kconfig
+++ b/drivers/video/msm/Kconfig
@@ -525,6 +525,13 @@ config FB_MSM_LCDC_SAMSUNG_ANCORA_PANEL
 	---help---
 	  Support for LCDC SAMSUNG ANCORA panel
 
+config FB_MSM_LCDC_S6E63M0_WVGA_PANEL
+	depends on FB_MSM_LCDC_HW
+	bool "LCDC S6E63M0 WVGA Panel"
+	select FB_MSM_LCDC_S6E63M0_WVGA
+	---help---
+	  Support for LCDC Samsung S6E63M0 WVGA (480x800) panel
+
 config FB_MSM_LVDS_CHIMEI_WXGA_PANEL
         bool "LVDS Chimei WXGA Panel"
         select FB_MSM_LVDS_CHIMEI_WXGA
