--- a/drivers/media/video/Kconfig
+++ b/drivers/media/video/Kconfig
@@ -1208,6 +1208,7 @@ config MSM_CAMERA_DEBUG
 	help
 	  Enable printk() debug for msm camera
 
+source "drivers/media/video/msm/Kconfig"
 
 if V4L_MEM2MEM_DRIVERS
 
