ariesve: updated defconfig

--- a/arch/arm/configs/ariesve_defconfig
+++ b/arch/arm/configs/ariesve_defconfig
@@ -1935,6 +1935,40 @@ CONFIG_VIDEOBUF2_DMA_SG=y
 CONFIG_VIDEOBUF2_MSM_MEM=y
 # CONFIG_VIDEO_CAPTURE_DRIVERS is not set
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
+
+#
+# Qualcomm MSM Camera And Video
+#
+CONFIG_MSM_CAMERA=y
+# CONFIG_MSM_CAMERA_DEBUG is not set
+# CONFIG_MSM_CAMERA_V4L2 is not set
+
+#
+# Camera Sensor Selection
+#
+CONFIG_OEM_CAMERA=y
+CONFIG_USE_QUP_I2C=y
+# CONFIG_SENSOR_MC7 is not set
+CONFIG_SENSOR_CE147=y
+# CONFIG_SENSOR_S5K4ECGX is not set
+CONFIG_SENSOR_S5KA3DFX=y
+# CONFIG_MT9T013 is not set
+# CONFIG_MT9D112 is not set
+# CONFIG_SENSOR_S5K5CCAF is not set
+# CONFIG_VX6953 is not set
+# CONFIG_SN12M0PZ is not set
+# CONFIG_MT9P012 is not set
+# CONFIG_MT9P012_KM is not set
+# CONFIG_MT9E013 is not set
+# CONFIG_S5K3E2FX is not set
+# CONFIG_VB6801 is not set
+CONFIG_MSM_CAMERA_FLASH=y
+CONFIG_MSM_GEMINI=y
+CONFIG_MSM_VPE=y
+# CONFIG_QUP_EXCLUSIVE_TO_CAMERA is not set
+# CONFIG_SENSOR_SR030PC30 is not set
+# CONFIG_SENSOR_SR030PC30_T679 is not set
+# CONFIG_SENSOR_SR130PC10 is not set
 CONFIG_MSM_VIDC=y
 # CONFIG_RADIO_ADAPTERS is not set
 
